# flash-brief-news

./: .gitignore  main.py  pyproject.toml
.cursor/rules/: 001-python-style.mdc  002-dependency-management.mdc  003-module-structure.mdc  004-tdd-first.mdc
src/: main.py  run_daily.py
src/news_summarizer/: __init__.py
src/news_summarizer/collectors/: __init__.py  news_collector.py
src/news_summarizer/generators/: __init__.py  report_generator.py
src/news_summarizer/summarizers/: __init__.py  news_summarizer.py
src/news_summarizer/utils/: __init__.py  config.py
tests/: __init__.py  test_main.py  test_run_daily.py
tests/news_summarizer/: __init__.py
tests/news_summarizer/collectors/: __init__.py  test_news_collector.py
tests/news_summarizer/generators/: __init__.py  test_report_generator.py
tests/news_summarizer/summarizers/: __init__.py  test_news_summarizer.py
